fixinf img visibility

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -240,3 +240,7 @@ section.profile-section .profile-section-content {
     display: block;
     padding: 20px;
   }
+
+  .hide {
+    visibility: hidden;;
+  }
